--- a/composer.json
+++ b/composer.json
@@ -22,6 +22,7 @@
         "livewire/livewire": "^3.5",
         "oriondevelops/filament-greeter": "^0.2.0",
         "pelmered/filament-money-field": "^1.4",
+        "phpoffice/phpword": "^1.3",
         "spatie/laravel-permission": "^6.9"
     },
     "require-dev": {
