--- a/composer.json
+++ b/composer.json
@@ -9,6 +9,7 @@
     "license": "MIT",
     "require": {
         "php": "^8.2",
+        "ariaieboy/filament-currency": "^1.9",
         "barryvdh/laravel-dompdf": "^2.2",
         "creasi/laravel-nusa": "^0.1.8",
         "filament/filament": "^v3.2.115",
