--- a/composer.json
+++ b/composer.json
@@ -14,6 +14,7 @@
         "creasi/laravel-nusa": "^0.1.8",
         "filament/filament": "^v3.2.115",
         "filament/infolists": "^3.2",
+        "filament/notifications": "^3.2",
         "filament/widgets": "^3.2",
         "joaopaulolndev/filament-edit-profile": "^1.0",
         "laravel/framework": "^11.9",
@@ -21,6 +22,7 @@
         "laravel/tinker": "^2.9",
         "laraveldaily/laravel-invoices": "^4.0",
         "livewire/livewire": "^3.5",
+        "maatwebsite/excel": "^3.1",
         "oriondevelops/filament-greeter": "^0.2.0",
         "pelmered/filament-money-field": "^1.4",
         "phpoffice/phpword": "^1.3",
