--- a/composer.json
+++ b/composer.json
@@ -18,6 +18,7 @@
         "filament/widgets": "^3.2",
         "joaopaulolndev/filament-edit-profile": "^1.0",
         "laravel/framework": "^11.9",
+        "laravel/octane": "^2.6",
         "laravel/sanctum": "^4.0",
         "laravel/tinker": "^2.9",
         "laraveldaily/laravel-invoices": "^4.0",
