--- a/composer.json
+++ b/composer.json
@@ -12,6 +12,7 @@
         "ariaieboy/filament-currency": "^1.9",
         "barryvdh/laravel-dompdf": "^2.2",
         "creasi/laravel-nusa": "^0.1.8",
+        "eightynine/filament-excel-import": "^3.1",
         "filament/filament": "^v3.2.115",
         "filament/infolists": "^3.2",
         "filament/notifications": "^3.2",
