--- a/composer.json
+++ b/composer.json
@@ -30,7 +30,8 @@
         "oriondevelops/filament-greeter": "^0.2.0",
         "pelmered/filament-money-field": "^1.4",
         "phpoffice/phpword": "^1.3",
-        "spatie/laravel-permission": "^6.9"
+        "spatie/laravel-permission": "^6.9",
+        "yebor974/filament-renew-password": "^2.1"
     },
     "require-dev": {
         "barryvdh/laravel-ide-helper": "^3.2",
