--- a/composer.json
+++ b/composer.json
@@ -32,15 +32,15 @@
         "pelmered/filament-money-field": "^1.4",
         "phpoffice/phpword": "^1.3",
         "spatie/laravel-permission": "^6.9",
-        "yebor974/filament-renew-password": "^2.1"
+        "yebor974/filament-renew-password": "^2.1",
+        "nunomaduro/collision": "^8.0",
+        "fakerphp/faker": "^1.23"
     },
     "require-dev": {
         "barryvdh/laravel-ide-helper": "^3.2",
-        "fakerphp/faker": "^1.23",
         "laravel/pint": "^1.13",
         "laravel/sail": "^1.26",
         "mockery/mockery": "^1.6",
-        "nunomaduro/collision": "^8.0",
         "phpunit/phpunit": "^11.0.1"
     },
     "autoload": {
