--- a/composer.json
+++ b/composer.json
@@ -14,11 +14,13 @@
         "barryvdh/laravel-dompdf": "^2.2",
         "creasi/laravel-nusa": "^0.1.8",
         "eightynine/filament-excel-import": "^3.1",
+        "fakerphp/faker": "^1.23",
         "filament/filament": "^v3.2.115",
         "filament/infolists": "^3.2",
         "filament/notifications": "^3.2",
         "filament/widgets": "^3.2",
         "filipfonal/filament-log-manager": "^2.0",
+        "jaocero/activity-timeline": "^1.2",
         "joaopaulolndev/filament-edit-profile": "^1.0",
         "laravel/framework": "^11.9",
         "laravel/octane": "^2.6",
@@ -28,13 +30,13 @@
         "livewire/livewire": "^3.5",
         "maatwebsite/excel": "^3.1",
         "nasution/terbilang": "^0.1.0",
+        "nunomaduro/collision": "^8.0",
         "oriondevelops/filament-greeter": "^0.2.0",
         "pelmered/filament-money-field": "^1.4",
         "phpoffice/phpword": "^1.3",
+        "saade/filament-fullcalendar": "^3.0",
         "spatie/laravel-permission": "^6.9",
-        "yebor974/filament-renew-password": "^2.1",
-        "nunomaduro/collision": "^8.0",
-        "fakerphp/faker": "^1.23"
+        "yebor974/filament-renew-password": "^2.1"
     },
     "require-dev": {
         "barryvdh/laravel-ide-helper": "^3.2",
