--- a/composer.json
+++ b/composer.json
@@ -34,6 +34,7 @@
         "maatwebsite/excel": "^3.1",
         "nasution/terbilang": "^0.1.0",
         "nunomaduro/collision": "^8.0",
+        "opcodesio/log-viewer": "^3.19",
         "oriondevelops/filament-greeter": "^0.2.0",
         "pelmered/filament-money-field": "^1.4",
         "phpoffice/phpword": "^1.3",
