--- a/package.json
+++ b/package.json
@@ -10,9 +10,11 @@
         "@tailwindcss/typography": "^0.5.15",
         "autoprefixer": "^10.4.20",
         "axios": "^1.7.4",
+        "laravel-echo": "^2.2.4",
         "laravel-vite-plugin": "^1.0",
         "postcss": "^8.4.49",
         "postcss-nesting": "^13.0.1",
+        "pusher-js": "^8.4.0",
         "tailwindcss": "^3.4.15",
         "vite": "^5.0"
     }
