chore(dev): add laravel/boost package

--- a/composer.json
+++ b/composer.json
@@ -47,6 +47,7 @@
     },
     "require-dev": {
         "barryvdh/laravel-ide-helper": "^3.2",
+        "laravel/boost": "^1.8",
         "laravel/pint": "^1.13",
         "laravel/sail": "^1.26",
         "mockery/mockery": "^1.6",
